--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    @apply bg-slate-100;
+  }
+}
+@layer components {
+  .nav-item {
+    @apply transition cursor-pointer flex items-center h-full px-2 md:px-4 hover:border-cyan-400 hover:text-cyan-400 border-b-2 border-white;
+  }
+}
