--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -6,6 +6,14 @@
   html {
     @apply bg-slate-100;
   }
+  pre,
+  code {
+    white-space: pre-wrap;
+  }
+  a {
+    word-wrap: break-word;
+    word-break: break-all;
+  }
 }
 @layer components {
   .nav-item {
