--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -20,3 +20,25 @@
     @apply transition cursor-pointer flex items-center h-full px-2 md:px-4 hover:border-cyan-400 hover:text-cyan-400 border-b-2 border-white;
   }
 }
+
+.headroom {
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
+.headroom--unfixed {
+  position: relative;
+  transform: translateY(0);
+}
+.headroom--scrolled {
+  transition: transform 200ms ease-in-out;
+}
+.headroom--unpinned {
+  position: fixed;
+  transform: translateY(-56px);
+}
+.headroom--pinned {
+  position: fixed;
+  transform: translateY(0%);
+}
