--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -50,3 +50,19 @@
 .side-bar-not-top.side-bar-pinned {
   top: 112px;
 }
+/* 滚动槽 */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 6px;
+}
+::-webkit-scrollbar-track {
+  border-radius: 4px;
+  background: rgba(0, 0, 0, 0.06);
+  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.08);
+}
+/* 滚动条滑块 */
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background: #ccc;
+  -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
+}
