--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -19,6 +19,9 @@
   .nav-item {
     @apply transition cursor-pointer flex items-center h-full px-2 md:px-4 hover:border-cyan-400 hover:text-cyan-400 border-b-2 border-white;
   }
+  .side-bar-item {
+    @apply text-base leading-9 w-full px-4 hover:bg-gray-100 cursor-pointer;
+  }
 }
 .svg-gray {
   color: rgb(30, 30, 30);
