--- a/packages/website/styles/side-bar.css
+++ b/packages/website/styles/side-bar.css
@@ -40,9 +40,9 @@ Note: Beware of modifying this element as it can break the animations - you shou
 /* General sidebar styles */
 .bm-menu {
   background: #fff;
-  padding: 2.5em 1.5em 0;
+  padding: 0.5em 0;
   font-size: 1.15em;
-  width: 16rem;
+  width: 250px;
   box-shadow: 2px 0 8px rgba(0, 0, 0, 0.15);
   z-index: 1002;
 }
@@ -55,7 +55,6 @@ Note: Beware of modifying this element as it can break the animations - you shou
 /* Wrapper for item list */
 .bm-item-list {
   color: #b8b7ad;
-  padding: 0.8em;
 }
 
 /* Individual item */
