--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -28,24 +28,27 @@
   .dark-border-hover {
     @apply dark:hover:text-gray-300 dark:hover:border-gray-300;
   }
-  .bg-nav-dark {
-    background-color: #1d2025;
-  }
-  .gray-666 {
-    color: #666666;
-    fill: #666666;
+  .card-shadow {
+    box-shadow: 0 2px 8px rgb(0, 0, 0, 0.15);
   }
   .bg-dark {
-    background-color: rgb(13, 17, 23);
+    background-color: #26282c;
+  }
+  .fill-dark {
+    fill: #333333;
   }
   .text-dark {
+    fill: rgb(158, 158, 158);
     color: rgb(158, 158, 158);
   }
   .text-dark-light {
     color: rgb(153, 153, 153);
   }
+  .border-nav-dark-light {
+    border-color: rgb(158, 158, 158);
+  }
   .border-nav-dark {
-    border-color: #1d2025;
+    border-color: #26282c;
   }
   .border-dark {
     border-color: rgb(158, 158, 158);
@@ -110,4 +113,13 @@
 body .wl-panel {
   margin: 0.5em 0;
   border-radius: 0;
+}
+.dark .wl-input:focus {
+  background-color: inherit;
+}
+.dark .wl-editor:focus {
+  background-color: inherit;
+}
+.dark .wl-panel {
+  background-color: #26282c;
 }
