feat: 适配移动端导航栏相关

--- a/packages/website/styles/github-markdown.css
+++ b/packages/website/styles/github-markdown.css
@@ -33,7 +33,7 @@
   --color-fg-default: #c9d1d9;
   --color-fg-muted: #8b949e;
   --color-fg-subtle: #484f58;
-  --color-canvas-default: #0d1117;
+  --color-canvas-default: #26282c;
   --color-canvas-subtle: rgb(30, 30, 30);
   --color-border-default: #30363d;
   --color-border-muted: #21262d;
