--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -31,6 +31,12 @@
   .card-shadow {
     box-shadow: 0 2px 8px rgb(0, 0, 0, 0.15);
   }
+  .card-shadow-dark {
+    box-shadow: 0 2px 8px rgb(0, 0, 0, 0.3);
+  }
+  .filter-dark {
+    filter: grayscale(0.2);
+  }
   .bg-dark {
     background-color: #26282c;
   }
