feat: 暗色模式调整正文颜色&阅读全文按钮

--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -47,6 +47,12 @@
     fill: rgb(158, 158, 158);
     color: rgb(158, 158, 158);
   }
+  .text-dark-r {
+    color: #26282c;
+  }
+  .bg-dark-light {
+    background-color: rgb(158, 158, 158);
+  }
   .text-dark-light {
     color: rgb(153, 153, 153);
   }
