--- a/packages/website/styles/github-markdown.css
+++ b/packages/website/styles/github-markdown.css
@@ -30,9 +30,9 @@
   --color-prettylights-syntax-brackethighlighter-angle: #8b949e;
   --color-prettylights-syntax-sublimelinter-gutter-mark: #484f58;
   --color-prettylights-syntax-constant-other-reference-link: #a5d6ff;
-  --color-fg-default: #c9d1d9;
-  --color-fg-muted: #8b949e;
-  --color-fg-subtle: #484f58;
+  --color-fg-default: rgb(158, 158, 158);
+  --color-fg-muted: rgb(120, 120, 120);
+  --color-fg-subtle: rgb(80, 80, 80);
   --color-canvas-default: #26282c;
   --color-canvas-subtle: rgb(30, 30, 30);
   --color-border-default: #30363d;
