--- a/packages/website/styles/pagination.css
+++ b/packages/website/styles/pagination.css
@@ -2,6 +2,20 @@
   margin: 0;
   padding: 0;
   font-size: 14px;
+  --pg-background-color: #fff;
+  --pg-hover-bg: rgb(229, 231, 235);
+  --pg-color: rgba(0, 0, 0, 0.85);
+  --pg-color-disable: rgba(0, 0, 0, 0.25);
+  --pg-border: none;
+  --pg-color-active: rgba(0, 0, 0, 0.85);
+}
+.dark .rc-pagination {
+  --pg-background-color: #232428;
+  --pg-hover-bg: rgb(158, 158, 158);
+  --pg-color: rgb(158, 158, 158);
+  --pg-color-disable: rgb(100, 100, 100);
+  --pg-border: none;
+  --pg-color-active: #232428;
 }
 .rc-pagination ul,
 .rc-pagination ol {
@@ -15,7 +29,7 @@
   height: 0;
   overflow: hidden;
   visibility: hidden;
-  content: ' ';
+  content: " ";
 }
 .rc-pagination-total-text {
   display: inline-block;
@@ -34,9 +48,9 @@
   text-align: center;
   vertical-align: middle;
   list-style: none;
-  background-color: #fff;
-  border: 1px solid #d9d9d9;
-  border-radius: 2px;
+  background-color: var(--pg-background-color);
+  border: var(--pg-border);
+  border-radius: 4px;
   outline: 0;
   cursor: pointer;
   user-select: none;
@@ -44,9 +58,11 @@
 .rc-pagination-item a {
   display: block;
   padding: 0 6px;
-  color: rgba(0, 0, 0, 0.85);
+  color: var(--pg-color);
   transition: none;
+  /* box-shadow: 0 2px 8px rgb(0, 0, 0, 0.3); */
 }
+
 .rc-pagination-item a:hover {
   text-decoration: none;
 }
@@ -55,17 +71,25 @@
   border-color: #1890ff;
   transition: all 0.3s;
 }
+.rc-pagination-item a {
+  height: 100%;
+  line-height: 28px;
+}
 .rc-pagination-item:focus a,
 .rc-pagination-item:hover a {
-  color: #1890ff;
+  color: var(--pg-color-active);
+  background-color: var(--pg-hover-bg);
+  border-radius: 4px;
 }
 .rc-pagination-item-active {
   font-weight: 500;
-  background: #fff;
+  background: var(--pg-background-color);
   border-color: #1890ff;
 }
 .rc-pagination-item-active a {
-  color: #1890ff;
+  color: var(--pg-color-active);
+  background-color: var(--pg-hover-bg);
+  border-radius: 4px;
 }
 .rc-pagination-item-active:focus,
 .rc-pagination-item-active:hover {
@@ -73,7 +97,7 @@
 }
 .rc-pagination-item-active:focus a,
 .rc-pagination-item-active:hover a {
-  color: #40a9ff;
+  color: var(--bg-color-active);
 }
 .rc-pagination-jump-prev,
 .rc-pagination-jump-next {
@@ -89,7 +113,7 @@
 .rc-pagination-jump-prev button:after,
 .rc-pagination-jump-next button:after {
   display: block;
-  content: '•••';
+  content: "•••";
 }
 .rc-pagination-prev,
 .rc-pagination-jump-prev,
@@ -103,13 +127,13 @@
   display: inline-block;
   min-width: 28px;
   height: 28px;
-  color: rgba(0, 0, 0, 0.85);
+  color: var(--pg-color);
   font-family: Arial;
   line-height: 28px;
   text-align: center;
   vertical-align: middle;
   list-style: none;
-  border-radius: 2px;
+  border-radius: 4px;
   cursor: pointer;
   transition: all 0.3s;
 }
@@ -119,7 +143,7 @@
 }
 .rc-pagination-prev button,
 .rc-pagination-next button {
-  color: rgba(0, 0, 0, 0.85);
+  color: var(--pg-color);
   cursor: pointer;
   user-select: none;
 }
@@ -134,9 +158,9 @@
   height: 100%;
   font-size: 12px;
   text-align: center;
-  background-color: #fff;
-  border: 1px solid #d9d9d9;
-  border-radius: 2px;
+  background-color: var(--pg-background-color);
+  border: var(--pg-border);
+  border-radius: 4px;
   outline: none;
   transition: all 0.3s;
 }
@@ -144,15 +168,17 @@
 .rc-pagination-next:focus .rc-pagination-item-link,
 .rc-pagination-prev:hover .rc-pagination-item-link,
 .rc-pagination-next:hover .rc-pagination-item-link {
-  color: #1890ff;
+  color: var(--pg-color-active);
   border-color: #1890ff;
+  background-color: var(--pg-hover-bg);
+  border-radius: 4px;
 }
 .rc-pagination-prev button:after {
-  content: '‹';
+  content: "‹";
   display: block;
 }
 .rc-pagination-next button:after {
-  content: '›';
+  content: "›";
   display: block;
 }
 .rc-pagination-disabled,
@@ -163,7 +189,7 @@
 .rc-pagination-disabled .rc-pagination-item-link,
 .rc-pagination-disabled:hover .rc-pagination-item-link,
 .rc-pagination-disabled:focus .rc-pagination-item-link {
-  color: rgba(0, 0, 0, 0.25);
+  color: var(--pg-color-disable);
   border-color: #d9d9d9;
   cursor: not-allowed;
 }
@@ -224,9 +250,9 @@
   margin-right: 8px;
   padding: 0 6px;
   text-align: center;
-  background-color: #fff;
-  border: 1px solid #d9d9d9;
-  border-radius: 2px;
+  background-color: var(--pg-background-color);
+  border: var(--pg-border);
+  border-radius: 4px;
   outline: none;
   transition: border-color 0.3s;
 }
@@ -242,7 +268,7 @@
   cursor: not-allowed;
 }
 .rc-pagination.rc-pagination-disabled .rc-pagination-item a {
-  color: rgba(0, 0, 0, 0.25);
+  color: var(--pg-color-disable);
   background: transparent;
   border: none;
   cursor: not-allowed;
@@ -255,7 +281,7 @@
   color: #fff;
 }
 .rc-pagination.rc-pagination-disabled .rc-pagination-item-link {
-  color: rgba(0, 0, 0, 0.25);
+  color: var(--pg-color-disable);
   background: #f5f5f5;
   border-color: #d9d9d9;
   cursor: not-allowed;
