feat: 复制弹窗适配暗色模式

--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -150,3 +150,9 @@ body .wl-panel {
 .dark .wl-panel {
   background-color: #26282c;
 }
+.dark .swal2-popup {
+  background-color: #26282c;
+}
+.dark .swal2-title {
+  color: rgb(158, 158, 158);
+}
