feat: 评论区表情搜索暗色

--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -156,3 +156,7 @@ body .wl-panel {
 .dark .swal2-title {
   color: rgb(158, 158, 158);
 }
+.wl-git-popup input {
+  background-color: inherit;
+  outline: none;
+}
