--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -20,7 +20,7 @@
 }
 @layer components {
   .nav-item {
-    @apply transition cursor-pointer flex items-center h-full px-2 md:px-4 hover:border-cyan-400 hover:text-cyan-400 border-b-2 border-white;
+    @apply transition cursor-pointer flex items-center h-full px-2 md:px-4  border-b-2 border-white;
   }
   .side-bar-item {
     @apply text-base leading-9 w-full px-4 hover:bg-gray-100 cursor-pointer;
@@ -48,6 +48,9 @@
   }
   .fill-dark {
     fill: #333333;
+  }
+  .text-dark-hover {
+    color: rgb(200, 200, 200);
   }
   .text-dark {
     fill: rgb(158, 158, 158);
