feat: 联系方式二维码弹窗

--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -164,3 +164,7 @@ body .wl-panel {
   background-color: inherit;
   outline: none;
 }
+.popover-arrow {
+  opacity: 1 !important;
+  bottom: 2px !important;
+}
