fix: 某些文章卡片撑大问题

--- a/packages/website/styles/github-markdown.css
+++ b/packages/website/styles/github-markdown.css
@@ -92,6 +92,9 @@
 .markdown-body ul {
   list-style: unset;
 }
+.markdown-body code {
+  word-break: break-all;
+}
 .markdown-body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
