fix: 有序列表显示异常

--- a/packages/website/styles/github-markdown.css
+++ b/packages/website/styles/github-markdown.css
@@ -92,6 +92,9 @@
 .markdown-body ul {
   list-style: unset;
 }
+.markdown-body ol {
+  list-style: unset;
+}
 .markdown-body code {
   word-break: break-all;
 }
