fix: 导航栏点击范围过小

--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -24,7 +24,7 @@
 }
 @layer components {
   .nav-item {
-    @apply transition cursor-pointer flex items-center h-full px-2 md:px-4  border-b-2 border-white;
+    @apply transition cursor-pointer flex items-center h-full  border-b-2 border-white;
   }
   .side-bar-item {
     @apply text-base leading-9 w-full px-4 hover:bg-gray-100 cursor-pointer;
