fix: 后台列表样式显示出错

--- a/packages/admin/src/global.less
+++ b/packages/admin/src/global.less
@@ -27,10 +27,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-// ul,
-// ol {
-//   list-style: none;
-// }
+ul,
+ol {
+  list-style: none;
+}
+.vditor {
+  ul,
+  ol {
+    list-style: initial;
+  }
+}
 
 @media (max-width: @screen-xs) {
   .ant-table {
