feat: 完善方可分析 tab

--- a/packages/admin/src/components/Footer/index.css
+++ b/packages/admin/src/components/Footer/index.css
@@ -5,14 +5,23 @@
   padding-bottom: 24px;
   user-select: none;
 }
+.ua.blue {
+  color: #1772b4;
+}
 .ua {
   position: relative;
   color: #333;
   font-size: 14;
   text-decoration: none;
 }
+.ua.blue:hover {
+  color: #1772b4;
+}
 .ua:hover {
   color: #333;
+}
+.blue.ua::before {
+  background: #1772b4;
 }
 .ua:before {
   position: absolute;
