faet: 扩大图片右键选取

--- a/packages/admin/src/global.less
+++ b/packages/admin/src/global.less
@@ -87,3 +87,11 @@ ol {
 .ant-pro-setting-drawer-handle {
   visibility: hidden;
 }
+.hover-gray {
+  transition-property: all;
+  transition-duration: 150ms;
+  transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.hover-gray:hover {
+  background-color: rgb(223, 223, 223)
+}
