--- a/packages/admin/src/pages/document.ejs
+++ b/packages/admin/src/pages/document.ejs
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <title>Van Blog Admin</title>
+  <link rel="manifest" href="https://path/to/manifest.json">
   <link rel="icon" href="https://pic.mereith.com/logo.svg" type="image/x-icon" />
 </head>
 
