feat: 调整 markdown 分界线样式

--- a/packages/website/styles/github-markdown.css
+++ b/packages/website/styles/github-markdown.css
@@ -36,7 +36,7 @@
   --color-canvas-default: #26282c;
   --color-canvas-subtle: rgb(30, 30, 30);
   --color-border-default: #30363d;
-  --color-border-muted: #21262d;
+  --color-border-muted: #3e4145;
   --color-neutral-muted: rgba(110, 118, 129, 0.4);
   --color-accent-fg: #58a6ff;
   --color-accent-emphasis: #1f6feb;
