--- a/packages/admin/src/pages/document.ejs
+++ b/packages/admin/src/pages/document.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cn">
 
 <head>
   <meta charset="UTF-8" />
@@ -7,7 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <title>Van Blog Admin</title>
-  <link rel="manifest" href="https://path/to/manifest.json">
   <link rel="icon" href="https://pic.mereith.com/logo.svg" type="image/x-icon" />
 </head>
 
