feat: https 证书全自动按需申请&文档更新

--- a/packages/admin/src/global.less
+++ b/packages/admin/src/global.less
@@ -95,3 +95,19 @@ ol {
 .hover-gray:hover {
   background-color: rgb(223, 223, 223)
 }
+
+
+.dark-switch[aria-checked="true"] {
+  background: rgb(23,114,180) ;
+  .ant-switch-handle::before {
+    background-color: rgb(36, 37, 37);
+  }
+}
+
+body .dark-switch {
+  background: black;
+  .ant-switch-handle::before {
+    background-color: rgb(162 162 162);
+  }
+}
+
