feat: 后台编辑器页面增加宽度提升体验

--- a/packages/admin/src/global.less
+++ b/packages/admin/src/global.less
@@ -111,3 +111,11 @@ body .dark-switch {
   }
 }
 
+.editor-full  {
+    .ant-pro-grid-content {
+      max-width: 50000px !important;
+    }
+    .ant-pro-page-container-children-content {
+      margin: 0 !important;
+    }
+}
