feat: 优化布局，大尺寸不显示顶栏，主题切换放到侧边栏

--- a/packages/admin/src/components/ThemeButton/index.less
+++ b/packages/admin/src/components/ThemeButton/index.less
@@ -3,7 +3,7 @@
   align-items: center;
   cursor: pointer;
   height: 100%;
-  margin-right: 8px;
+  margin-right: 6px;
 }
 .theme-icon {
   fill: #4b5563;
@@ -13,7 +13,13 @@
     fill: #7a7e84;
   }
 }
-
+:global {
+  .ant-menu-inline-collapsed {
+    .theme-text {
+      display: none;
+    }
+  }
+}
 .theme-icon-dark {
   fill: rgb(158, 158, 158);
   height: 100%;
