--- a/packages/admin/src/global.less
+++ b/packages/admin/src/global.less
@@ -126,3 +126,18 @@ body .dark-switch {
     height: 100%;
   }
 }
+.ant-pro-grid-content.wide {
+  max-width: 50000px !important;
+}
+.t-24 .ant-pro-grid-content.wide {
+  transform: translateY(-24px);
+}
+.t-8 .ant-pro-grid-content.wide {
+  transform: translateY(-8px);
+}
+.t-0 .ant-pro-grid-content.wide {
+  transform: translateY(0);
+}
+body .ant-pro-table .ant-pro-table-search {
+  margin-bottom: 22px;
+}
