--- a/packages/admin/src/pages/document.ejs
+++ b/packages/admin/src/pages/document.ejs
@@ -66,8 +66,8 @@
         box-sizing: border-box;
         margin: 0;
         padding: 0;
-        color: rgba(0, 0, 0, 0.65);
-        color: #1890ff;
+        color: #1772B4;
+
         font-size: 14px;
         font-variant: tabular-nums;
         line-height: 1.5;
@@ -102,7 +102,7 @@
         display: block;
         width: 9px;
         height: 9px;
-        background-color: #1890ff;
+        background-color: #1772B4;
         border-radius: 100%;
         -webkit-transform: scale(0.75);
         -ms-transform: scale(0.75);
@@ -202,16 +202,12 @@
           height: 100%;
           min-height: 420px;
         ">
-      <img src="<%= context.config.publicPath +'logo.svg'%>" alt="logo" width="256" />
+
       <div class="page-loading-warp">
         <div class="ant-spin ant-spin-lg ant-spin-spinning">
           <span class="ant-spin-dot ant-spin-dot-spin"><i class="ant-spin-dot-item"></i><i
               class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i><i class="ant-spin-dot-item"></i></span>
         </div>
-      </div>
-      <div style="display: flex; align-items: center; justify-content: center">
-        <img src="<%= context.config.publicPath +'logo.svg'%>" width="32" style="margin-right: 8px" />
-        VanBlog
       </div>
     </div>
   </div>
