--- a/packages/admin/src/global.less
+++ b/packages/admin/src/global.less
@@ -180,3 +180,7 @@ body .bytemd {
   background: #f5f5f5;
   -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
 }
+body .ant-page-header-heading-title {
+  overflow: auto;
+  text-overflow: unset;
+}
