--- a/packages/admin/src/global.less
+++ b/packages/admin/src/global.less
@@ -190,3 +190,10 @@ body .ant-page-header-heading-title {
 .markdown-body ol {
   list-style: decimal;
 }
+.more-hover {
+  cursor: pointer;
+  border-radius: 2px;
+  :hover {
+    background-color: #f5f5f5;
+  }
+}
