fix: mermaid 图表无法展示&黑暗模式样式

--- a/packages/website/styles/github-markdown.css
+++ b/packages/website/styles/github-markdown.css
@@ -1050,9 +1050,12 @@
 .markdown-body * {
   word-break: break-word;
 }
-.language-mermaid {
-  background-color: white;
-}
 .markdown-body ol {
   list-style: decimal;
+}
+.dark .language-mermaid {
+  background-color: #26282c;
+}
+.language-mermaid {
+  background-color: white;
 }
