fix: 评论组件下拉拖动卡顿

--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -163,6 +163,9 @@ body .wl-panel {
 .dark .wl-editor:focus {
   background-color: inherit;
 }
+body #wl-editor {
+  transition: none;
+}
 .dark .wl-panel {
   background-color: #26282c;
 }
