feat: 导航栏的按钮增加 hover 态的文案（title 属性）

--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -163,7 +163,7 @@ body .wl-panel {
 .dark .wl-editor:focus {
   background-color: inherit;
 }
-body #wl-editor {
+body #wl-edit {
   transition: none;
 }
 .dark .wl-panel {
