feat: 支持高亮块语法（老费劲了） #37

--- a/packages/website/styles/github-markdown.css
+++ b/packages/website/styles/github-markdown.css
@@ -1053,3 +1053,11 @@
 .language-mermaid {
   background-color: white;
 }
+
+body .markdown-body pre {
+  background-color: inherit;
+}
+
+body .markdown-body .relative > pre {
+  margin-bottom: 0;
+}
