feat: 前台代码块随主题亮暗切换 #43

--- a/packages/website/styles/github-markdown.css
+++ b/packages/website/styles/github-markdown.css
@@ -80,7 +80,7 @@
   --color-fg-muted: #57606a;
   --color-fg-subtle: #6e7781;
   --color-canvas-default: #ffffff;
-  --color-canvas-subtle: #ffffff;
+  --color-canvas-subtle: #f6f8fa;
   --color-border-default: #d0d7de;
   --color-border-muted: hsla(210, 18%, 87%, 1);
   --color-neutral-muted: rgba(175, 184, 193, 0.2);
@@ -926,11 +926,11 @@
 
 .markdown-body .highlight pre,
 .markdown-body pre {
-  padding: 0px;
+  padding: 0;
   overflow: auto;
   font-size: 85%;
   line-height: 1.45;
-  background-color: var(--color-canvas-subtle);
+  background-color: var(--color-canvas-subtle) !important;
   border-radius: 6px;
 }
 
@@ -1060,4 +1060,7 @@ body .markdown-body pre {
 
 body .markdown-body .relative > pre {
   margin-bottom: 0;
+  padding: 16px !important;
+  border: none !important;
+  margin: 0 !important
 }
