feat: 后台增加控制页面链接点击跳转行为配置（可选择为在新窗口打开）

--- a/packages/website/styles/globals.css
+++ b/packages/website/styles/globals.css
@@ -196,6 +196,9 @@ body #wl-edit {
   background: var(--text-color-sm);
   transition: all 0.3s;
 }
+body .ua-link::before {
+  bottom: -3px;
+}
 .ua:hover:before {
   width: 100%;
   left: 0;
