--- a/packages/website/styles/toc.css
+++ b/packages/website/styles/toc.css
@@ -98,3 +98,14 @@
   font-size: 0.72em;
   padding-left: 9em;
 }
+
+
+.toc-mobile .markdown-navigation {
+  font-size: 16px;
+}
+
+.toc-mobile .markdown-navigation .title-anchor  {
+  color: #0969da;
+  background: inherit;
+  margin: 0.4em 0 ;
+}
