fix: firefox 浏览器目录滚动条白条 #132

--- a/packages/website/styles/toc.css
+++ b/packages/website/styles/toc.css
@@ -29,7 +29,7 @@
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Helvetica", "Arial", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
   width: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-width: 0;
   padding-top: 0.5em;
   padding-bottom: 0.5em;
