chore: update style file

--- a/packages/admin/src/components/Editor/index.less
+++ b/packages/admin/src/components/Editor/index.less
@@ -105,7 +105,7 @@ body .markdown-body .custom-container .relative > pre {
   left: 0;
   z-index: 999;
 }
-.bytemd-toolbar-left .hiden {
+.bytemd-toolbar-left .hidden {
 display: none;
 }
 body .emoji-categories {
