style: markdown 代码块单行代码时会跑偏

--- a/packages/admin/src/style/code-dark.css
+++ b/packages/admin/src/style/code-dark.css
@@ -4,9 +4,11 @@
   padding: 22px 16px 16px;
 }
 
-.dark code.hljs {
+/* .dark code.hljs {
   padding: 3px 5px
 }
+
+*/
 
 .dark .hljs {
   background: inherit;
