[Fix] Repair admin package to an acceptable state

--- a/packages/admin/src/components/Editor/index.less
+++ b/packages/admin/src/components/Editor/index.less
@@ -3,6 +3,10 @@
   top: 32px;
   left: 0;
   z-index: 999;
+
+  &.hidden {
+    display: none !important;
+  }
 }
 .bytemd-toolbar-left .hidden {
   display: none;
